Squashed commit of the following:
commit 4dcbd058c943484b268a5850b14a46235e6b348f
Author: Stefan <StefanEndress@users.noreply.github.com>
Date:   Thu Jun 8 19:09:57 2023 +0200

    udpate checkbox

commit b2c91ecb5b9dde70dead708ddab39186b6445917
Author: Stefan <StefanEndress@users.noreply.github.com>
Date:   Thu Jun 8 19:08:21 2023 +0200

    status

commit 61c8ca6ac8bc44061557012560ead6da0d0bdf9b
Author: Stefan <StefanEndress@users.noreply.github.com>
Date:   Thu Jun 8 19:06:11 2023 +0200

    update toggle

commit 5da57b051839ff812af80b148bc0cea24dcd3ef9
Author: Stefan <StefanEndress@users.noreply.github.com>
Date:   Thu Jun 8 19:04:45 2023 +0200

    update toggle config

commit d6ab354ea79283a1a03c597d2f1f8fb73ec90767
Author: Stefan <StefanEndress@users.noreply.github.com>
Date:   Thu Jun 8 18:58:53 2023 +0200

    update toggle

commit a57453bf7e76a7351e13f2a8312830e8dc47a269
Author: Stefan <StefanEndress@users.noreply.github.com>
Date:   Thu Jun 8 18:54:51 2023 +0200

    fixed toggle colors

commit e28df6470553942dc3908ff400b0474be8816d66
Author: Stefan <StefanEndress@users.noreply.github.com>
Date:   Thu Jun 8 18:52:23 2023 +0200

    change name of avatar-group to avatarGroup

commit 458e9b649b1783b9c9a029dd7d555ea370e67fff
Author: Stefan <StefanEndress@users.noreply.github.com>
Date:   Thu Jun 8 18:43:03 2023 +0200

    update button colors

commit 4eeb0b6de776189f4d8d7f29a793b95ada5a8812
Author: Stefan <StefanEndress@users.noreply.github.com>
Date:   Thu Jun 8 18:37:43 2023 +0200

    update application

commit 3dca0046e31ecbee6db9d6af6735d62b21131809
Author: Stefan <StefanEndress@users.noreply.github.com>
Date:   Thu Jun 8 18:36:34 2023 +0200

    update config

commit 05c912800d84b5739322be8fe2903d5a857afb95
Author: Stefan <StefanEndress@users.noreply.github.com>
Date:   Thu Jun 8 18:33:10 2023 +0200

    update config colors

commit e249e418cbc424788d4edb1d446d657406fde3ab
Author: Stefan <StefanEndress@users.noreply.github.com>
Date:   Thu Jun 8 18:27:

--- a/tokens/application.json
+++ b/tokens/application.json
@@ -40,7 +40,7 @@
             "type": "dimension"
           },
           "lg": {
-            "value": "{app.dimension.control.radius.md} + 0.25rem",
+            "value": "{app.dimension.control.radius.md} + 1rem",
             "type": "dimension"
           }
         },
@@ -128,11 +128,11 @@
         },
         "radius": {
           "xs": {
-            "value": "{app.dimension.control.radius.sm} - 0.25rem",
+            "value": "{app.dimension.control.radius.sm} - 0.125rem",
             "type": "dimension"
           },
           "sm": {
-            "value": "{app.dimension.control.radius.md} - 0.25rem",
+            "value": "{app.dimension.control.radius.md} - 0.125rem",
             "type": "dimension"
           },
           "md": {
@@ -140,11 +140,11 @@
             "type": "dimension"
           },
           "lg": {
-            "value": "{app.dimension.control.radius.md} + 0.25rem",
+            "value": "{app.dimension.control.radius.md} + 0.125rem",
             "type": "dimension"
           },
           "xl": {
-            "value": "{app.dimension.control.radius.lg} + 0.25rem",
+            "value": "{app.dimension.control.radius.lg} + 0.125rem",
             "type": "dimension"
           }
         },
@@ -374,23 +374,23 @@
         },
         "border": {
           "xs": {
-            "value": "{config.dimension.dot.border}",
+            "value": "{app.dimension.dot.height.xs} *  0.333",
             "type": "dimension"
           },
           "sm": {
-            "value": "{config.dimension.dot.border}",
+            "value": "{app.dimension.dot.height.sm} *  0.333",
             "type": "dimension"
           },
           "md": {
-            "value": "{config.dimension.dot.border}",
+            "value": "{app.dimension.dot.height.md} *  0.333",
             "type": "dimension"
           },
           "lg": {
-            "value": "{config.dimension.dot.border}",
+            "value": "{app.dimension.dot.height.lg} *  0.333",
             "type": "dimension"
           },
           "xl": {
-            "value": "{config.dimension.dot.border}",
+            "value": "{app.dimension.dot.height.xl} *  0.333",
             "type": "dimension"
           }
         }
@@ -578,7 +578,7 @@
             "type": "color"
           },
           "inverted": {
-            "value": "hsla({config.color.neutral.hue.default}, {config.color.neutral.saturation.default}, 100%, 1)",
+            "value": "hsl({config.color.neutral.hue.default}, {config.color.neutral.saturation.default}, 96%)",
             "type": "color"
           },
           "link": {
@@ -600,6 +600,28 @@
         }
       },
       "component": {
+        "shadow": {
+          "default": {
+            "value": "hsla({config.color.neutral.hue.default}, {config.color.neutral.saturation.default}, 0%, 0.1)",
+            "type": "color"
+          },
+          "strong": {
+            "value": "hsla({config.color.neutral.hue.default}, {config.color.neutral.saturation.default}, 0%, 0.2)",
+            "type": "color"
+          },
+          "stronger": {
+            "value": "hsla({config.color.neutral.hue.default}, {config.color.neutral.saturation.default}, 0%, 0.3)",
+            "type": "color"
+          },
+          "strongest": {
+            "value": "hsla({config.color.neutral.hue.default}, {config.color.neutral.saturation.default}, 0%, 0.5)",
+            "type": "color"
+          },
+          "none": {
+            "value": "hsla({config.color.neutral.hue.default}, {config.color.neutral.saturation.default}, 0%, 0)",
+            "type": "color"
+          }
+        },
         "primary": {
           "bg": {
             "solid": {
@@ -608,7 +630,7 @@
             },
             "translucent": {
               "type": "color",
-              "value": "hsla({config.color.primary.hue.default}, {config.color.primary.saturation.default}, 50%, {config.color.primary.alpha.default})"
+              "value": "hsla({config.color.primary.hue.default}, {config.color.primary.saturation.default}, 50%, {config.color.primary.alpha.bg.default})"
             }
           },
           "border": {
@@ -618,7 +640,7 @@
             },
             "translucent": {
               "type": "color",
-              "value": "hsla({config.color.primary.hue.default}, {config.color.primary.saturation.default}, 50%, {config.color.primary.alpha.default})"
+              "value": "hsla({config.color.primary.hue.default}, {config.color.primary.saturation.default}, 50%, {config.color.primary.alpha.bg.default})"
             }
           },
           "fg": {
@@ -644,7 +666,7 @@
             },
             "translucent": {
               "type": "color",
-              "value": "hsla({config.color.secondary.hue.default}, {config.color.secondary.saturation.default}, 60%, {config.color.secondary.alpha.default})"
+              "value": "hsla({config.color.secondary.hue.default}, {config.color.secondary.saturation.default}, 60%, {config.color.secondary.alpha.bg.default})"
             }
           },
           "border": {
@@ -654,7 +676,7 @@
             },
             "translucent": {
               "type": "color",
-              "value": "hsla({config.color.secondary.hue.default}, {config.color.secondary.saturation.default}, 60%, {config.color.secondary.alpha.default})"
+              "value": "hsla({config.color.secondary.hue.default}, {config.color.secondary.saturation.default}, 60%, {config.color.secondary.alpha.bg.default})"
             }
           },
           "fg": {
@@ -672,7 +694,7 @@
             }
           }
         },
-        "danger": {
+        "negative": {
           "bg": {
             "solid": {
               "type": "color",
@@ -680,7 +702,7 @@
             },
             "translucent": {
               "type": "color",
-              "value": "hsla({config.color.danger.hue.default}, {config.color.danger.saturation.default}, 50%, {config.color.danger.alpha.default})"
+              "value": "hsla({config.color.danger.hue.default}, {config.color.danger.saturation.default}, 50%, {config.color.danger.alpha.bg.default})"
             }
           },
           "border": {
@@ -690,7 +712,7 @@
             },
             "translucent": {
               "type": "color",
-              "value": "hsla({config.color.danger.hue.default}, {config.color.danger.saturation.default}, 50%, {config.color.secondary.alpha.default})"
+              "value": "hsla({config.color.danger.hue.default}, {config.color.danger.saturation.default}, 50%, {config.color.secondary.alpha.bg.default})"
             }
           },
           "fg": {
@@ -716,7 +738,7 @@
             },
             "translucent": {
               "type": "color",
-              "value": "hsla({config.color.info.hue.default}, {config.color.info.saturation.default}, 50%, {config.color.info.alpha.default})"
+              "value": "hsla({config.color.info.hue.default}, {config.color.info.saturation.default}, 50%, {config.color.info.alpha.bg.default})"
             }
           },
           "border": {
@@ -726,7 +748,7 @@
             },
             "translucent": {
               "type": "color",
-              "value": "hsla({config.color.info.hue.default}, {config.color.info.saturation.default}, 50%, {config.color.info.alpha.default})"
+              "value": "hsla({config.color.info.hue.default}, {config.color.info.saturation.default}, 50%, {config.color.info.alpha.bg.default})"
             }
           },
           "fg": {
@@ -752,7 +774,7 @@
             },
             "translucent": {
               "type": "color",
-              "value": "hsla({config.color.neutral.hue.default}, {config.color.neutral.saturation.default}, 70%, {config.color.neutral.alpha.default})"
+              "value": "hsla({config.color.neutral.hue.default}, {config.color.neutral.saturation.default}, 70%, {config.color.neutral.alpha.bg.default})"
             }
           },
           "border": {
@@ -790,7 +812,7 @@
           "focusRing": {
             "default": {
               "type": "color",
-              "value": "hsla({config.color.info.hue.default}, {config.color.info.saturation.default}, 50%, {config.color.info.alpha.focusRing})"
+              "value": "hsla({config.color.info.hue.default}, {config.color.info.saturation.default}, 50%, {config.color.info.alpha.focusRing.default})"
             }
           }
         },
@@ -802,7 +824,7 @@
             },
             "translucent": {
               "type": "color",
-              "value": "hsla({config.color.neutral.hue.default}, {config.color.neutral.saturation.default}, 100%, {config.color.neutral.alpha.default})"
+              "value": "hsla({config.color.neutral.hue.default}, {config.color.neutral.saturation.default}, 100%, {config.color.neutral.alpha.bg.default})"
             }
           },
           "border": {
@@ -812,7 +834,7 @@
             },
             "translucent": {
               "type": "color",
-              "value": "hsla({config.color.neutral.hue.default}, {config.color.neutral.saturation.default}, 100%, {config.color.neutral.alpha.default})"
+              "value": "hsla({config.color.neutral.hue.default}, {config.color.neutral.saturation.default}, 100%, {config.color.neutral.alpha.bg.default})"
             }
           },
           "fg": {
@@ -830,7 +852,7 @@
             }
           }
         },
-        "warning": {
+        "idle": {
           "bg": {
             "solid": {
               "type": "color",
@@ -838,7 +860,7 @@
             },
             "translucent": {
               "type": "color",
-              "value": "hsla({config.color.warning.hue.default}, {config.color.warning.saturation.default}, 50%, {config.color.danger.alpha.default})"
+              "value": "hsla({config.color.warning.hue.default}, {config.color.warning.saturation.default}, 50%, {config.color.danger.alpha.bg.default})"
             }
           },
           "border": {
@@ -848,7 +870,7 @@
             },
             "translucent": {
               "type": "color",
-              "value": "hsla({config.color.warning.hue.default}, {config.color.warning.saturation.default}, 50%, {config.color.secondary.alpha.default})"
+              "value": "hsla({config.color.warning.hue.default}, {config.color.warning.saturation.default}, 50%, {config.color.secondary.alpha.bg.default})"
             }
           },
           "fg": {
@@ -866,7 +888,7 @@
             }
           }
         },
-        "success": {
+        "positive": {
           "bg": {
             "solid": {
               "type": "color",
@@ -874,7 +896,7 @@
             },
             "translucent": {
               "type": "color",
-              "value": "hsla({config.color.success.hue.default}, {config.color.success.saturation.default}, 45%, {config.color.danger.alpha.default})"
+              "value": "hsla({config.color.success.hue.default}, {config.color.success.saturation.default}, 45%, {config.color.danger.alpha.bg.default})"
             }
           },
           "border": {
@@ -884,7 +906,7 @@
             },
             "translucent": {
               "type": "color",
-              "value": "hsla({config.color.success.hue.default}, {config.color.success.saturation.default}, 40%, {config.color.secondary.alpha.default})"
+              "value": "hsla({config.color.success.hue.default}, {config.color.success.saturation.default}, 40%, {config.color.secondary.alpha.bg.default})"
             }
           },
           "fg": {
@@ -899,6 +921,42 @@
             "onTranslucent": {
               "type": "color",
               "value": "hsl({config.color.success.hue.default}, {config.color.success.saturation.default}, 20%)"
+            }
+          }
+        },
+        "unchecked": {
+          "bg": {
+            "solid": {
+              "type": "color",
+              "value": "hsl({config.color.neutral.hue.default}, {config.color.neutral.saturation.default}, 60%)"
+            },
+            "translucent": {
+              "type": "color",
+              "value": "hsla({config.color.neutral.hue.default}, {config.color.neutral.saturation.default}, 10%, {config.color.neutral.alpha.unchecked.bg.default})"
+            }
+          },
+          "border": {
+            "solid": {
+              "type": "color",
+              "value": "hsl({config.color.neutral.hue.default}, {config.color.neutral.saturation.default}, 60%)"
+            },
+            "translucent": {
+              "type": "color",
+              "value": "hsla({config.color.neutral.hue.default}, {config.color.neutral.saturation.default}, 10%, {config.color.neutral.alpha.unchecked.border.default})"
+            }
+          },
+          "fg": {
+            "solid": {
+              "type": "color",
+              "value": "{app.color.surface.fg.default}"
+            },
+            "onSolid": {
+              "type": "color",
+              "value": "{app.color.surface.fg.inverted}"
+            },
+            "onTranslucent": {
+              "type": "color",
+              "value": "{app.color.component.unchecked.fg.solid}"
             }
           }
         }
@@ -926,7 +984,7 @@
         },
         "initials": {
           "value": {
-            "fontFamily": "{config.fontFamily.uiAlt}, ui-monospace",
+            "fontFamily": "{config.fontFamily.uiAlt}",
             "fontWeight": "{config.fontWeight.medium}",
             "lineHeight": "120%",
             "fontSize": "{config.fontSize.control}"
@@ -1097,7 +1155,7 @@
           "type": "letterSpacing"
         },
         "initials": {
-          "value": "8%",
+          "value": "4%",
           "type": "letterSpacing"
         }
       },
@@ -1111,7 +1169,7 @@
           "type": "letterSpacing"
         },
         "initials": {
-          "value": "8%",
+          "value": "4%",
           "type": "letterSpacing"
         }
       }
@@ -1124,9 +1182,22 @@
               "x": "0",
               "y": "0",
               "blur": "0",
+              "spread": "0.25rem",
+              "color": "{app.color.component.focus.focusRing.default}",
+              "type": "dropShadow"
+            }
+          ],
+          "type": "boxShadow"
+        },
+        "border": {
+          "value": [
+            {
+              "x": "0",
+              "y": "0",
+              "blur": "0",
               "spread": "2px",
               "color": "{app.color.component.focus.border.default}",
-              "type": "innerShadow"
+              "type": "dropShadow"
             },
             {
               "x": "0",
@@ -1150,6 +1221,34 @@
             "color": "{app.color.surface.shadow.default}",
             "type": "dropShadow"
           },
+          "type": "boxShadow"
+        }
+      },
+      "control": {
+        "default": {
+          "value": [
+            {
+              "x": "0",
+              "y": "0.0625rem",
+              "blur": "0.25rem",
+              "spread": "0",
+              "color": "{app.color.component.shadow.strongest}",
+              "type": "dropShadow"
+            }
+          ],
+          "type": "boxShadow"
+        },
+        "pressed": {
+          "value": [
+            {
+              "x": "0",
+              "y": "0",
+              "blur": "0",
+              "spread": "0",
+              "color": "{app.color.component.shadow.none}",
+              "type": "dropShadow"
+            }
+          ],
           "type": "boxShadow"
         }
       }
