update checkbox colors and app disabled colors

--- a/tokens/application.json
+++ b/tokens/application.json
@@ -582,7 +582,7 @@
             },
             "translucent": {
               "type": "color",
-              "value": "hsla({config.color.neutral.hue.default}, {config.color.neutral.saturation.default}, 80%, 30%)"
+              "value": "hsla({config.color.neutral.hue.default}, {config.color.neutral.saturation.default}, 80%, 0.3)"
             }
           },
           "fg": {
