--- a/tokens/application.json
+++ b/tokens/application.json
@@ -492,7 +492,7 @@
             }
           }
         },
-        "negative": {
+        "danger": {
           "bg": {
             "solid": {
               "type": "color",
@@ -665,7 +665,7 @@
             }
           }
         },
-        "idle": {
+        "warning": {
           "bg": {
             "solid": {
               "type": "color",
@@ -701,7 +701,7 @@
             }
           }
         },
-        "positive": {
+        "success": {
           "bg": {
             "solid": {
               "type": "color",
