--- a/tokens/application.json
+++ b/tokens/application.json
@@ -474,7 +474,7 @@
             },
             "translucent": {
               "type": "color",
-              "value": "hsla({config.color.neutral.hue.default}, {config.color.neutral.saturation.default}, 10%, {config.color.neutral.alpha.unchecked.bg.default})"
+              "value": "hsla({config.color.neutral.hue.default}, {config.color.neutral.saturation.default}, 10%, 0.4)"
             }
           },
           "border": {
@@ -484,7 +484,7 @@
             },
             "translucent": {
               "type": "color",
-              "value": "hsla({config.color.neutral.hue.default}, {config.color.neutral.saturation.default}, 10%, {config.color.neutral.alpha.unchecked.border.default})"
+              "value": "hsla({config.color.neutral.hue.default}, {config.color.neutral.saturation.default}, 10%, 0.4)"
             }
           },
           "fg": {
