--- a/tokens/application.json
+++ b/tokens/application.json
@@ -346,7 +346,7 @@
               "studio.tokens": {
                 "modify": {
                   "type": "alpha",
-                  "value": "{config.color.neutral.alpha.hover} ",
+                  "value": "{config.color.neutral.alpha.border.hover} ",
                   "space": "hsl"
                 }
               }
@@ -359,7 +359,7 @@
               "studio.tokens": {
                 "modify": {
                   "type": "alpha",
-                  "value": "{config.color.neutral.alpha.active}",
+                  "value": "{config.color.neutral.alpha.border.active}",
                   "space": "hsl"
                 }
               }
