--- a/tokens/config.json
+++ b/tokens/config.json
@@ -179,10 +179,6 @@
             "active": {
               "value": "0.5",
               "type": "other"
-            },
-            "onDefault": {
-              "value": "0.2",
-              "type": "other"
             }
           },
           "border": {
@@ -238,10 +234,6 @@
             },
             "active": {
               "value": "0.6",
-              "type": "other"
-            },
-            "onDefault": {
-              "value": "0.15",
               "type": "other"
             }
           },
@@ -305,6 +297,14 @@
             "default": {
               "value": "0.35",
               "type": "other"
+            },
+            "hover": {
+              "value": "0.45",
+              "type": "other"
+            },
+            "active": {
+              "value": "0.55",
+              "type": "other"
             }
           }
         },
@@ -354,10 +354,6 @@
             },
             "active": {
               "value": "0.5",
-              "type": "other"
-            },
-            "onDefault": {
-              "value": "0.2",
               "type": "other"
             }
           },
@@ -421,10 +417,6 @@
             "active": {
               "value": "0.6",
               "type": "other"
-            },
-            "onDefault": {
-              "value": "0.2",
-              "type": "other"
             }
           },
           "border": {
@@ -466,10 +458,6 @@
           "active": {
             "value": "0.2",
             "type": "other"
-          },
-          "onDefault": {
-            "value": "0.2",
-            "type": "other"
           }
         },
         "alpha": {
@@ -484,10 +472,6 @@
             },
             "active": {
               "value": "0.6",
-              "type": "other"
-            },
-            "onDefault": {
-              "value": "0.2",
               "type": "other"
             }
           },
@@ -544,10 +528,6 @@
             },
             "active": {
               "value": "0.6",
-              "type": "other"
-            },
-            "onDefault": {
-              "value": "0.2",
               "type": "other"
             }
           },
