--- a/tokens/application.json
+++ b/tokens/application.json
@@ -982,6 +982,19 @@
           "type": "boxShadow"
         }
       },
+      "component": {
+        "default": {
+          "value": {
+            "x": "0",
+            "y": "2rem",
+            "blur": "6rem",
+            "spread": "0",
+            "color": "{app.color.surface.shadow.default}",
+            "type": "dropShadow"
+          },
+          "type": "boxShadow"
+        }
+      },
       "control": {
         "default": {
           "value": [
